fix search-btn overflow issue

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,7 +18,7 @@ body {
 }
 .search-container > .search-bar {
 	width: 35vw;
-	height: 40px;
+	height: auto;
 	border: 1px solid #c9bdbd;
 	background: none;
 	border-radius: 20px 0 0 20px;
@@ -46,6 +46,7 @@ body {
 .search-btn-text {
 	color: #d1cccc;
 	font-size: 2rem;
+	margin-top: 5px;
 }
 .main-content-container {
 	display: flex;
@@ -74,8 +75,12 @@ body {
 	border-bottom: 1px solid #000;
 	padding-bottom: 10px;
 }
-.icon {
+.icon-container {
 	padding: 10px 20px;
+}
+.icon {
+	width: 10vw;
+	height: 10vw;
 }
 .conditions {
 	font-size: calc(6rem + 10vw);
@@ -88,7 +93,7 @@ body {
 	padding: 10px;
 }
 .temperature > .temp {
-	font-size: calc(4rem + 4vw);
+	font-size: 10vw;
 	font-family: dancing;
 }
 .temperature > .feels-like {
